test: SensorData の E2E テストの追加
